--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,13 +5,23 @@ name: Python application
 
 on:
   workflow_dispatch:
+    inputs:
+      onefile:
+        description: '📦 Build as a single executable file (--onefile)'
+        required: true
+        type: boolean
+        default: true
+      noupx:
+        description: '🚀 Disable UPX compression for faster startup (--noupx)'
+        required: true
+        type: boolean
+        default: false
 
 permissions:
   contents: read
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -20,10 +30,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python 3.13.5
-      uses: actions/setup-python@v3
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5 # Updated to the latest version
       with:
-        python-version: "3.13.5"
+        python-version: "3.13" # Using 3.13 is more flexible than a specific patch
         
     - name: Install dependencies
       run: |
@@ -31,7 +41,23 @@ jobs:
         pip install -r requirements.txt
 
     - name: Build executable
-      run: pyinstaller --onefile --name Wattpad_Downloader --paths src src/main.py
+      run: |
+        # Start with the base command
+        $CMD = "pyinstaller --name Wattpad_Downloader --paths src src/main.py"
+
+        # Conditionally add --onefile flag
+        if ('${{ github.event.inputs.onefile }}' -eq 'true') {
+          $CMD += " --onefile"
+        }
+
+        # Conditionally add --noupx flag
+        if ('${{ github.event.inputs.noupx }}' -eq 'true') {
+          $CMD += " --noupx"
+        }
+
+        # Print and run the final command
+        Write-Host "Executing: $CMD"
+        Invoke-Expression $CMD
       shell: pwsh
 
     - name: Upload artifacts
